<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="12dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:backgroundTint="@color/colorshape"
                    android:elevation="12dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/recent_match_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/match_01"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_recent_TeamNameA"
                        android:text="Team A"
                        android:layout_alignParentStart="true"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        />-->


                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_recent_TeamNameB"
                        android:text="Team B"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        />-->


                    <ImageView
                        android:id="@+id/recent_pic_TeamA"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentStart="true"
                        android:layout_margin="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/cskimage" />


               <!--     <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/txtView_recent_TeamNameA"
                      android:text="@string/team_a"
                  android:layout_alignParentStart="true"
                        android:layout_marginStart="30dp"
                      android:layout_margin="10dp"
                      android:textColor="@color/black"
                      android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_below="@+id/recent_pic_TeamA"
                      />-->


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/circleshpe"
                        android:padding="8dp"
                        android:text="@string/vs"
                        android:textColor="#FEFBFB"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <ImageView
                        android:id="@+id/recent_pic_TeamB"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/mipic" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/recent_txtView_StatusResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/win_status"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
