<?xml version="1.0" encoding="utf-8"?>
<!--
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home"
        app:menu="@menu/activity_home_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:text="T20 IPL"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="35sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="20dp"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/home_liveScore"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1.2dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/teams"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_score"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/home_schedule"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1.2dp">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/schedule"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedual"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/home_recentMatches"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1.2dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/recentmatch"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_matches"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/home_pointTable"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1.2dp">




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/pointtable"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_table"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/home_teams"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1.2dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/teams"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teams"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/home_aboutus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1.2dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/aboutus"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </GridLayout>


  <!--   <androidx.cardview.widget.CardView
          android:id="@+id/home_teams"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="22dp"
         android:layout_marginEnd="22dp"
          app:cardCornerRadius="15dp"
          app:cardElevation="15dp">


          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal|center_vertical"
              android:layout_margin="16dp"
              android:orientation="vertical">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="72dp"
                  android:layout_gravity="center_horizontal"
                  android:src="@drawable/teams"

                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/teams"
                  android:textAlignment="center"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:layout_gravity="center"

                  />


          </LinearLayout>


      </androidx.cardview.widget.CardView>-->

      <!--<androidx.cardview.widget.CardView
          android:id="@+id/home_aboutus"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginBottom="16dp"
          app:cardBackgroundColor="#ffff"
          app:cardCornerRadius="12dp"
          app:cardElevation="10dp"
          app:strokeColor="@color/colorPrimary"
          app:strokeWidth="1.2dp">

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal|center_vertical"
              android:layout_margin="16dp"
              android:orientation="vertical">

              <ImageView
                  android:layout_width="70dp"
                  android:layout_height="70dp"
                  android:layout_gravity="center_horizontal"
                  android:src="@drawable/aboutus"

                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/about_us"
                  android:textAlignment="center"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="18sp"
                  android:textStyle="bold"

                  />


          </LinearLayout>


      </androidx.cardview.widget.CardView>-->


</LinearLayout>



