<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBg"
    android:orientation="vertical">


   <!-- <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtView_schedule_TeamNameA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:text="Team A"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/txtView_schedule_TeamNameB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:text="Team B"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/livescore_pic_TeamA"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_below="@+id/txtView_schedule_TeamNameA"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/download" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/vs"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />

                <ImageView
                    android:id="@+id/livescore_pic_TeamB"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_below="@+id/txtView_schedule_TeamNameB"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/download" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtView_startaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/start_action"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtView_schedule_stadiumName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtView_startaction"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/stadium_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtView_schedule_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtView_schedule_stadiumName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="Monday , 14/3/2020"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtView_schedule_City"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtView_schedule_date"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/city"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />


            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>-->



     <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_margin="16dp"
        android:elevation="15dp"
        app:cardCornerRadius="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:backgroundTint="@color/colorshape"
                    android:elevation="12dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/item_schedule_matchNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/match_01"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                </androidx.cardview.widget.CardView>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/item_schedule_pic_TeamA"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentStart="true"
                        android:scaleType="fitXY"
                        android:layout_margin="10dp"
                        android:src="@drawable/kingxi"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/vs"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:background="@drawable/shape"
                        android:textStyle="bold"
                        android:padding="8dp"

                        />

                    <ImageView
                        android:id="@+id/item_schedule_pic_TeamB"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:src="@drawable/mipic"
                        android:scaleType="fitXY" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <!--<TextView
                        android:id="@+id/txtView_startaction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/start_action"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold" />-->

                    <TextView
                        android:id="@+id/txtView_schedule_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtView_schedule_stadiumName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/txtView_schedule_date"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:text="@string/eden_garden_west_bengal"
                        android:textColor="@color/black"
                        android:textSize="18sp" />



                    <TextView
                        android:id="@+id/txtView_schedule_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:layout_below="@+id/txtView_schedule_stadiumName"
                        android:layout_centerHorizontal="true"
                        android:text="4:15 PM"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp" />


                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>


</LinearLayout>